# eshop_crash

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: native-sample.cpp  sotest.cpp
android/src/main/kotlin/com/example/eshop_crash/: CrashMaker.java  EshopCrashPlugin.kt
android/src/main/kotlin/com/haier/nativeso/: MainActivity.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/eshop_crash_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: eshop_crash.podspec
ios/Classes/: EshopCrashPlugin.h  EshopCrashPlugin.m
lib/: crash_debug_page.dart  eshop_crash.dart
test/: eshop_crash_test.dart
